Add new activity for note

--- a/A2_L1/app/src/main/AndroidManifest.xml
+++ b/A2_L1/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ListFullViewItemActivity"
+            android:label="@string/title_activity_list_full_view_item"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
