Start work on weather serevice

--- a/A2_L1/app/src/main/AndroidManifest.xml
+++ b/A2_L1/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity
             android:name=".DevActivity"
             android:parentActivityName=".ListActivity" />
+
+        <service android:name=".WeatherService" />
     </application>
 
 </manifest>
