--- a/A2_L1/app/src/main/AndroidManifest.xml
+++ b/A2_L1/app/src/main/AndroidManifest.xml
@@ -42,6 +42,10 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_info" />
         </receiver>
+
+        <service
+            android:name=".widget.NotesWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
     </application>
 
 </manifest>
